[package]
name = "staking_contract"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "staking_contract"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = "0.24"
rand = "0.8"
rand_core = "0.6"
wasm-bindgen = "0.2"
getrandom = { version = "0.2.15", features = ["js"] }

